# Simple-Image-Resizing-Tool

./: README.md  pyproject.toml
